[package]
name = "esus"
version = "0.1.0"
authors = ["Azorlogh <bott.alix@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]

[dependencies]
log = "0.4"
simple_logger = { version = "1.6.0", default-features = false }
winit = "0.25.0"
wgpu = { version = "0.11.0", features = ["spirv"] }
futures = "0.3.0"
shaderc = "0.6.2"
zerocopy = "0.3.0"
wgpu_glyph = "0.15"
ab_glyph = "0.2.5"
lyon = "0.17"
bytemuck = "1.7"
cgmath = "0.18.0"
rand = "0.8"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.6"
