[package]
name = "esus"
version = "0.1.0"
authors = ["Azorlogh <bott.alix@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]

[dependencies]
log = "0.4"
simple_logger = { version = "1.6.0", default-features = false }
winit = "0.26.1"
wgpu = { version = "0.12.0", features = ["spirv"] }
futures = "0.3.0"
zerocopy = "0.6.1"
wgpu_glyph = "0.16.0"
ab_glyph = "0.2.5"
lyon = "0.17"
bytemuck = "1.7"
cgmath = "0.18.0"
rand = "0.8"
custom_debug = "0.5.1"
dyn-clone = "1.0"
downcast-rs = "1.2.0"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3.6"
